--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EyesUp</title>
+  <link rel="icon" href="./assets/images/logos/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="page"></body>
