feat: add footer styles, change styles folders structure

--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="page"></body>
+<body class="page light"></body>
 
 </html>
